--- a/index.html
+++ b/index.html
@@ -62,6 +62,56 @@
         </div>
       </div>
     </section>
+
+    <!-- what i do section -->
+    <section class="what">
+      <div class="what-info">
+        <div class="what-info-heading">
+          <h3>What I do</h3>
+        </div>
+        <div class="what-info-description">
+          I have more than 10 years experience building software for clients all over the world. Below is a quick
+          overview of my main technical skill sets and technologies i use. Want to find out more about my experience?
+          Check out my online resume and project portfolio.
+        </div>
+      </div>
+      <div class="skills-container">
+        <div class="skill">
+          <img src="images/icons/js.png" alt="">
+          <p class="skill-title">Vanilla JavaScript</p>
+          <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ad explicabo numquam laborum distinctio neque aliquam reiciendis! Dolore, dignissimos doloremque!</p>
+        </div>
+        <div class="skill">
+          <img src="images/icons/react.png" alt="">
+          <p class="skill-title">React</p>
+          <p class="skill-description">Ullam, quae numquam atque culpa facere eligendi dicta, corporis dignissimos non quam, quasi alias. Nisi unde libero eum adipisci tenetur.</p>
+        </div>
+        <div class="skill">
+          <img src="images/icons/nodejs.png" alt="">
+          <p class="skill-title">Node.js</p>
+          <p class="skill-description">A obcaecati ipsam, possimus provident officia similique non culpa corrupti rem impedit, in iusto, illum facilis quae perferendis consequatur! Fugiat?</p>
+        </div>
+        <div class="skill">
+          <img src="images/icons/mongo.png" alt="">
+          <p class="skill-title">MongoDB</p>
+          <p class="skill-description">Aperiam voluptatibus provident nisi quia explicabo animi impedit non natus asperiores velit. Delectus veritatis, rerum laboriosam ex cupiditate asperiores consequatur?</p>
+        </div>
+      </div>
+      
+      
+    </section>
+
+
+
+
+    <!-- Resume Section -->
+    <Section>
+      <div class="resume">
+        <h3>A summary of My Resume</h3>
+      </div>
+   
+    </Section>
+
   </main>
   <footer></footer>
 
