--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <p class="resume-harvard">Apple Inc / 2020 Current</p>
           <p class="resume-skill">List skill/technologies here. You can change the icon above to any of the 1500+
             FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-            <hr>
+          <hr>
         </div>
       </div>
       <div class="resume-content">
@@ -138,7 +138,7 @@
           <p class="resume-harvard">Harvard University /2015-2017</p>
           <p class="resume-skill">List skill/technologies here. You can change the icon above to any of the 1500+
             FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-            <hr>
+          <hr>
         </div>
         <div class="resum-item">
 
@@ -146,7 +146,7 @@
           <p class="resume-harvard">Apple Inc / 2020 Current</p>
           <p class="resume-skill">List skill/technologies here. You can change the icon above to any of the 1500+
             FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-            <hr>
+          <hr>
         </div>
       </div>
       <div class="resume-content">
@@ -156,7 +156,7 @@
           <p class="resume-harvard">Harvard University /2015-2017</p>
           <p class="resume-skill">List skill/technologies here. You can change the icon above to any of the 1500+
             FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-         
+
         </div>
         <div class="resum-item">
 
@@ -164,17 +164,53 @@
           <p class="resume-harvard">Apple Inc / 2020 Current</p>
           <p class="resume-skill">List skill/technologies here. You can change the icon above to any of the 1500+
             FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
-          
+
         </div>
       </div>
 
     </Section>
-   <div class="bton">
-    <button class="btn-primary">Download CV</button>
-   </div>
+    <div class="bton">
+      <button class="btn-primary">Download CV</button>
+    </div>
+    <!-- contact section -->
+    <section class="contact">
+      <div>
+        <h3 class="section-title">Lets Connect</h3>
+        <p class="contact-para">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday
+          through Friday.</p>
+        <a href="">
+          <img src="images/icons/facebook.png" alt="">
+        </a>
+        <a href="">
+          <img src="images/icons/twitter.png" alt="">
+        </a>
+        <a href="">
+          <img src="images/icons/insta.png" alt="">
+        </a>
+      </div>
+      <div >
+        <h3 class="section-title">Let’s Message me</h3>
+        <form action="">
+          <label for="name">
+            <input type="text" name="cv-form" id="name" placeholder="Your Name">
+          </label>
+          <label for="pass">
+          <input type="password" name="cv-form" id="pass" placeholder="Your mail">
+          </label>
+          <label for="textarea">
+         <textarea name="cv-form" id="textarea" cols="30" rows="10" placeholder="Message"></textarea>
+          </label>
+        </form>
+      </div>
 
+    </section>
+    <div class="bton1">
+      <button class="btn-primary">Submit CV</button>
+    </div>
   </main>
-  <footer></footer>
+  <footer>
+
+  </footer>
 
 </body>
 
